Fixed navbar link jump

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,10 @@
 @import "tailwindcss";
 @source "../../node_modules/flowbite-svelte";
 @plugin "flowbite/plugin";
+
+.nav-inner {
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
